style.css
/* Full Document */

* {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

body {
    background-color: #dfbd98;
    /* background-color: rgb(229, 230, 216); */
    margin: 0;
    padding: 0;
}

p {
    font-size: 18px;
}

a {
    text-decoration: none;
    color: #ae756a;
    font-size: 18px;
    font-weight: bold;
}

/* Organization */
.first-section {
    background-color: #dfbd98;
    width: 100%;
    display: inline-block;
}

.second-section {
  background-color: rgb(229, 230, 216);
  border: 1px solid transparent;
  /* padding: 20px;
  border-radius: 20% 20% 0 0; */
}

.curved-spacer {
  background-color: rgb(229, 230, 216);
  height: 150px;
  padding-top: 10px;
  width: 120%;
  margin-left: -10%;
  /* padding: 20px; */
  border-radius: 100% 100% 0 0;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #333;
    color: #fff;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: transparent;
    /* background-color: #5a6a75; */
  }

.scrolled {
  background-color: rgb(67, 75, 82);
}

.header-buttons {
    display: flex;
    align-items: center;
    margin-right: 7%;
    }
 .centered-header {
    width: 50%;
 }
  .title {
    color: #dfbd98;
    color: white;
    font-size: 36px;
    margin-left: 7%;
  }

  .wishlist-header-button {
    margin-right: 7%;
    background-color: #ae756a;
    /* background-color: #798e9c; */
    border: 3px solid #ae756a;
    color: white;
    padding: 8px 40px;
    white-space: nowrap;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 24px;
    cursor: pointer;
    border-radius: 5px;
  }

  .outline-header-button {
    background-color: transparent;
    border: 3px solid #ae756a;
    color: white;
    white-space: nowrap;
    padding: 8px 40px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 24px;
    cursor: pointer;
    border-radius: 5px;
  }

  /* .logo {
    width: 30px;
    height: 30px;
    margin-left: 20px;
  } */

  .logo-container {
    display: flex; /* Use flexbox for positioning */
    align-items: center; /* Align items vertically */
  }

  .logo {
    width: 300px; /* Adjust width as needed */
    height: auto; /* Maintain aspect ratio */
    margin-right: 0px; /* Add spacing between logos */
  }

.main-container {
    width: 85%;
    margin: auto;
    margin-top: 4rem;
    font-size: 1.5rem;
}

/* Info Images Specifically */
.image-container {
    display: flex;
    justify-content: center;
}

.banner-image {
    position: absolute;
    z-index: -1;
}

.group-image {
    max-width: 90%;
    /* margin: 10px; */
    ;
}

/* Divider */
hr.solid {
    border-top: 1px solid grey;
}

.spacer {
    height: 60px;
}

table {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
  }
  
  /* Style for the comparison table */
  .comparison-table {
    width: 100%;
    border-collapse: collapse;
    margin: 20px;
    border: 1px solid black;
  }
  
  /* Style for table headers */
  .comparison-table th {
    background-color: black;
    border: 1px solid black;
    padding: 8px;
    text-align: left;
  }
  
  /* Style for table data cells */
  .comparison-table td {
    border: 1px solid black;
    padding: 8px;
  }
  
  /* Alternating row colors */
  .comparison-table tbody tr:nth-child(even) {
    background-color: black;
  }

/* Buttons */
.wishlist-button {
    width: 200px;
    height: 50px;
    font-size: 14px;
    line-height: 50px;
    padding: 0 30px;
    text-align: center;
    text-transform: uppercase;
    text-decoration: none;
    background-color: #798e9c;
    display: inline-block;
    border: 1px solid transparent;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    color: #d4cdbc;
}

a:link {
    color: white;
}

.centered-stuff {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Actual 'articles' Full {body, info} */
.article-full {
    margin-top: 1rem;
    display: flex;
}

.article-body {
    float: left;
    width: 50%;
    /* border: 1px solid teal; */
}

.article-info {
    float: left;
    width: 50%;
    margin: 10px;
}

.article-inner-info {
    padding: 10px;
}


.article-info-banner-1 {
    background-color:rgb(246, 195, 64);
    margin: 5px 5px 5px 5px;
    height: 1.8rem;

    display: flex;
    justify-content: center;
    align-items: center;
}

.article-info-banner-2 {
    background-color:rgb(229, 196, 112);
    margin: 5px 5px 5px 5px;
    height: 1.8rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* random */
.disclaimer {
    font-style:italic;
    width: 70%;
    margin: auto;
    text-align: center;
}

.options-column {
    display: none; /* Hide the options column by default */
    flex-direction: column;
    background-color: rgb(67, 75, 82);
    position: absolute;
    top: 60px; /* Adjust the top position as needed */
    right: 7%;
    z-index: 1;
  }

  .hamburger-icon {
    display: none; /* Display the hamburger icon */
    font-size: 24px;
    cursor: pointer;
    margin-right: 7%;
  }

  .options-button {
    color: white;
    border: none;
    font-size: 24px;
    margin: 15px;
    padding: 5px;
    background-color: transparent;
  }
@media screen and ((max-width: 750px) or (max-device-width: 750px)) {
    .main-container {
        width:90%;
    }
    .article-full {
        display: block;
    }
    
    .article-body {
        /* float: left; */
        width: 100%;
        /* border: 1px solid teal; */
    }
    
    .article-info {
        /* float: left; */
        width: 100%;
        margin: 10px;
    }

    .header-buttons {
        display: none; /* Hide the buttons by default */
      }

      .hamburger-icon {
        display: block; /* Display the hamburger icon */
      }



      .options-column.show {
        display: flex; /* Display the options column when the class 'show' is added */
      }
  }

